Fix display overflow

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body {
     font-size: 40px;
     display: flex;
     justify-content: flex-end;
+    white-space: nowrap;
     overflow: hidden;
 }
 
